"""docker-lldp — SONiC LLDP service container.

Phase 2: collapsed to sonic-common-layer base.
Provides lldpd and python3-swsscommon for database sync.
"""

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:docker_layer.bzl", "deb_extract_layer")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")

package(default_visibility = ["//visibility:public"])

# ── Service debs layer ───────────────────────────────────────────────────────

deb_extract_layer(
    name = "lldp_binary_layer",
    debs = [
        "//src/sonic-swss-common:swss_common",
    ],
    size_budget_mb = 250,
)

# ── Python wheels layer ──────────────────────────────────────────────────────

genrule(
    name = "lldp_wheels_layer",
    srcs = [
        "//src/sonic-dbsyncd:dbsyncd_wheel",
    ],
    outs = ["lldp_wheels_layer.tar"],
    cmd = """
set -euo pipefail
ROOTFS=$$(mktemp -d)
trap 'rm -rf "$$ROOTFS"' EXIT
pip3 install --no-cache-dir --no-deps --prefix=$$ROOTFS/usr/local $(SRCS)
SOURCE_DATE_EPOCH=0 tar --sort=name --mtime=@0 \
  --owner=0 --group=0 \
  -C "$$ROOTFS" -cf $(OUTS) .
""",
)

# ── Config + scripts layer ───────────────────────────────────────────────────

pkg_tar(
    name = "lldp_config_layer",
    srcs = [
        "critical_processes",
        "docker-lldp-init.sh",
        "lldpd",
        "lldpmgrd",
        "start.sh",
        "waitfor_lldp_ready.sh",
    ],
    remap_paths = {
        "critical_processes": "/etc/supervisor/critical_processes",
        "docker-lldp-init.sh": "/usr/local/bin/docker-lldp-init.sh",
        "lldpd": "/usr/sbin/lldpd",
        "lldpmgrd": "/usr/bin/lldpmgrd",
        "start.sh": "/usr/bin/start.sh",
        "waitfor_lldp_ready.sh": "/usr/bin/waitfor_lldp_ready.sh",
    },
    mode = "0755",
)

# ── docker-lldp OCI image ───────────────────────────────────────────────────

sonic_oci_image(
    name = "docker_lldp",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [
        ":lldp_binary_layer",
        ":lldp_wheels_layer",
        ":lldp_config_layer",
    ],
    env = {
        "DEBIAN_FRONTEND": "noninteractive",
    },
    labels = {
        "org.opencontainers.image.title": "docker-lldp",
        "org.opencontainers.image.description": "SONiC LLDP service",
        "sonic.container.name": "lldp",
    },
)
