"""docker-lldp — SONiC LLDP service container.

Hermetic build: lldpd from swss-common deb, config scripts from source.
No Docker at build time.
"""

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")

package(default_visibility = ["//visibility:public"])

# ── Service debs layer (swsscommon for Redis access) ────────────────────────
genrule(
    name = "lldp_binary_layer",
    srcs = [
        "//build/deb/sonic-swss-common:swss_common",
        "//build/deb/sonic-swss-common:python3_swsscommon",
    ],
    outs = ["lldp_binary_layer.tar"],
    cmd = """\
set -euo pipefail
TMPDIR=$$(mktemp -d)
trap 'rm -rf "$$TMPDIR"' EXIT
for src in $(SRCS); do
    if [ -f "$$src" ]; then
        INNER=$$(mktemp -d)
        ar x "$$src" --output="$$INNER" 2>/dev/null || true
        for dt in "$$INNER"/data.tar.*; do
            [ -f "$$dt" ] && tar xf "$$dt" -C "$$TMPDIR" 2>/dev/null || true
        done
        rm -rf "$$INNER"
    fi
done
# Fix usrmerge: move ./bin/, ./sbin/, ./lib/ into ./usr/ to avoid
# shadowing base image symlinks (/bin -> /usr/bin) in OCI layers.
for d in bin sbin lib; do
    if [ -d "$$TMPDIR/$$d" ] && [ ! -L "$$TMPDIR/$$d" ]; then
        mkdir -p "$$TMPDIR/usr/$$d"
        cp -a "$$TMPDIR/$$d/." "$$TMPDIR/usr/$$d/" 2>/dev/null || true
        rm -rf "$$TMPDIR/$$d"
    fi
done
COPYFILE_DISABLE=1 tar cf "$@" -C "$$TMPDIR" .
""",
    tags = [],
)

# ── Config + scripts layer ──────────────────────────────────────────────────
pkg_tar(
    name = "lldp_config_layer",
    srcs = [
        "critical_processes",
        "docker-lldp-init.sh",
        "lldpd",
        "lldpmgrd",
        "start.sh",
        "waitfor_lldp_ready.sh",
    ],
    remap_paths = {
        "critical_processes": "/etc/supervisor/critical_processes",
        "docker-lldp-init.sh": "/usr/local/bin/docker-lldp-init.sh",
        "lldpd": "/usr/sbin/lldpd",
        "lldpmgrd": "/usr/bin/lldpmgrd",
        "start.sh": "/usr/bin/start.sh",
        "waitfor_lldp_ready.sh": "/usr/bin/waitfor_lldp_ready.sh",
    },
    mode = "0755",
)

# ── docker-lldp OCI image ─────────────────────────────────────────────────
sonic_oci_image(
    name = "docker_lldp",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [
        ":lldp_binary_layer",
        ":lldp_config_layer",
    ],
    labels = {
        "org.opencontainers.image.title": "docker-lldp",
        "sonic.container.name": "lldp",
    },
)
