"""docker-macsec — SONiC MACsec (802.1AE) encryption service container.

Phase 2: collapsed from the 5-deep Make chain to 3 layers:
  distroless/base-debian12 -> sonic-common-layer -> sonic-swss-layer -> this image

Layer accounting:
  Layer 0: gcr.io/distroless/base-debian12           ~20 MB   (upstream, pinned)
  Layer 1: //dockers/sonic-common-layer               ~130 MB  (supervisord, libs)
  Layer 2: //dockers/docker-swss-layer-bullseye       ~120 MB  (libswsscommon+sairedis)
  Layer 3: THIS FILE                                  ~20 MB   (wpa_supplicant + cli)
  Total:                                              ~290 MB  (< 300 MB budget)
"""

load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")
load("//rules/bazel/oci:strip_layer.bzl", "stripped_layer")
load("//rules/bazel/j2:j2.bzl", "j2_render")

package(default_visibility = ["//visibility:public"])

# -- wpa_supplicant binary layer -----------------------------------------------

genrule(
    name = "macsec_binary_layer",
    srcs = ["//src/wpasupplicant:wpasupplicant_debs"],
    outs = ["macsec_binary_layer.tar"],
    cmd = """
set -euo pipefail
ROOTFS=$$(mktemp -d)
trap 'rm -rf "$$ROOTFS"' EXIT
for deb in $(SRCS); do
    dpkg-deb -x "$$deb" "$$ROOTFS"
done
SOURCE_DATE_EPOCH=0 tar --sort=name --mtime=@0 \
  --owner=0 --group=0 \
  -C "$$ROOTFS" -cf $(OUTS) .
""",
)

# -- sonic-utilities wheel layer -----------------------------------------------

genrule(
    name = "macsec_wheel_layer",
    srcs = ["//src/sonic-utilities:sonic_utilities_wheel"],
    outs = ["macsec_wheel_layer.tar"],
    cmd = """
set -euo pipefail
ROOTFS=$$(mktemp -d)
trap 'rm -rf "$$ROOTFS"' EXIT
pip3 install --no-cache-dir --no-deps \
  --target $$ROOTFS/usr/local/lib/python3/dist-packages \
  $(SRCS)
SOURCE_DATE_EPOCH=0 tar --sort=name --mtime=@0 \
  --owner=0 --group=0 \
  -C "$$ROOTFS" -cf $(OUTS) .
""",
)

# -- config + scripts layer ----------------------------------------------------

pkg_tar(
    name = "macsec_config_layer",
    srcs = [
        "supervisord.conf",
        "critical_processes",
        "etc/wpa_supplicant.conf",
    ],
    remap_paths = {
        "supervisord.conf": "/etc/supervisor/conf.d/supervisord.conf",
        "critical_processes": "/etc/supervisor/critical_processes",
        "etc/wpa_supplicant.conf": "/etc/wpa_supplicant.conf",
    },
    mode = "0644",
)

# -- CLI plugin layer ----------------------------------------------------------

pkg_tar(
    name = "macsec_cli_layer",
    srcs = glob(["cli/**"]),
    strip_prefix = ".",
    package_dir = "/cli",
)

# -- Size budget enforcement ---------------------------------------------------

stripped_layer(
    name = "macsec_binary_layer_stripped",
    src = ":macsec_binary_layer",
    size_budget_mb = 20,
)

# -- docker-macsec OCI image ---------------------------------------------------

sonic_oci_image(
    name = "docker_macsec",
    base = "//dockers/docker-swss-layer-bullseye:sonic_swss_layer_bullseye",
    tars = [
        ":macsec_binary_layer_stripped",
        ":macsec_wheel_layer",
        ":macsec_config_layer",
        ":macsec_cli_layer",
    ],
    env = {
        "DEBIAN_FRONTEND": "noninteractive",
    },
    labels = {
        "org.opencontainers.image.title": "docker-macsec",
        "org.opencontainers.image.description": "SONiC MACsec 802.1AE encryption service",
        "sonic.container.name": "macsec",
    },
)
