"""docker-macsec — SONiC MACsec (802.1AE) encryption service container (hermetic apt + custom .deb)."""

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:docker_layer.bzl", "deb_extract_layer")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")

package(default_visibility = ["//visibility:public"])

# ── wpa_supplicant binary layer ──────────────────────────────────────────────
# TODO: Convert //src/wpasupplicant:wpasupplicant_debs to hermetic @bookworm
#       package once wpasupplicant is declared in MODULE.bazel.

deb_extract_layer(
    name = "macsec_binary_layer",
    debs = ["//src/wpasupplicant:wpasupplicant_debs"],
    size_budget_mb = 250,
)

# ── Config + scripts layer ───────────────────────────────────────────────────

pkg_tar(
    name = "macsec_config_layer",
    srcs = [
        "supervisord.conf",
        "critical_processes",
        "etc/wpa_supplicant.conf",
    ],
    mode = "0644",
)

# ── CLI plugin layer ─────────────────────────────────────────────────────────

pkg_tar(
    name = "macsec_cli_layer",
    srcs = glob(["cli/**"]),
    strip_prefix = ".",
    package_dir = "/cli",
)

# ── docker-macsec OCI image ─────────────────────────────────────────────────

sonic_oci_image(
    name = "docker_macsec",
    base = "//dockers/docker-swss-layer-bullseye:sonic_swss_layer_bullseye",
    tars = [
        ":macsec_binary_layer",
        ":macsec_config_layer",
        ":macsec_cli_layer",
    ],
    labels = {
        "org.opencontainers.image.title": "docker-macsec",
        "sonic.container.name": "macsec",
    },
)
