"""docker-mux — SONiC MUX cable manager service container.

Phase 2: collapsed to sonic-common-layer base.
Provides linkmgrd binary for dual-ToR mux cable management.
"""

load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")
load("//rules/bazel/oci:strip_layer.bzl", "stripped_layer")

package(default_visibility = ["//visibility:public"])

# ── Service debs layer ───────────────────────────────────────────────────────

genrule(
    name = "mux_binary_layer",
    srcs = [
        "//src/linkmgrd:linkmgrd_debs",
    ],
    outs = ["mux_binary_layer.tar"],
    cmd = """
set -euo pipefail
ROOTFS=$$(mktemp -d)
trap 'rm -rf "$$ROOTFS"' EXIT
for deb in $(SRCS); do
    dpkg-deb -x "$$deb" "$$ROOTFS"
done
strip --strip-all "$$ROOTFS/usr/bin/linkmgrd" 2>/dev/null || true
SOURCE_DATE_EPOCH=0 tar --sort=name --mtime=@0 \
  --owner=0 --group=0 \
  -C "$$ROOTFS" -cf $(OUTS) .
""",
)

# ── Config + scripts layer ───────────────────────────────────────────────────

pkg_tar(
    name = "mux_config_layer",
    srcs = [
        "supervisord.conf",
        "critical_processes",
        "docker-init.sh",
    ],
    remap_paths = {
        "supervisord.conf": "/etc/supervisor/conf.d/supervisord.conf",
        "critical_processes": "/etc/supervisor/critical_processes",
        "docker-init.sh": "/usr/local/bin/docker-init.sh",
    },
    mode = "0755",
)

# ── Size budget enforcement ──────────────────────────────────────────────────

stripped_layer(
    name = "mux_binary_layer_stripped",
    src = ":mux_binary_layer",
    size_budget_mb = 15,
)

# ── docker-mux OCI image ────────────────────────────────────────────────────

sonic_oci_image(
    name = "docker_mux",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [
        ":mux_binary_layer_stripped",
        ":mux_config_layer",
    ],
    env = {
        "DEBIAN_FRONTEND": "noninteractive",
    },
    labels = {
        "org.opencontainers.image.title": "docker-mux",
        "org.opencontainers.image.description": "SONiC MUX cable manager service",
        "sonic.container.name": "mux",
    },
)
