"""docker-mux — SONiC MUX cable manager service container.

Phase 2: collapsed to sonic-common-layer base.
Provides linkmgrd binary for dual-ToR mux cable management.
"""

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:docker_layer.bzl", "deb_extract_layer")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")

package(default_visibility = ["//visibility:public"])

# ── Service debs layer ───────────────────────────────────────────────────────

deb_extract_layer(
    name = "mux_binary_layer",
    debs = [
        "//src/linkmgrd:linkmgrd_debs",
    ],
    size_budget_mb = 250,
)

# ── Config + scripts layer ───────────────────────────────────────────────────

pkg_tar(
    name = "mux_config_layer",
    srcs = [
        "supervisord.conf",
        "critical_processes",
        "docker-init.sh",
    ],
    remap_paths = {
        "supervisord.conf": "/etc/supervisor/conf.d/supervisord.conf",
        "critical_processes": "/etc/supervisor/critical_processes",
        "docker-init.sh": "/usr/local/bin/docker-init.sh",
    },
    mode = "0755",
)

# ── docker-mux OCI image ────────────────────────────────────────────────────

sonic_oci_image(
    name = "docker_mux",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [
        ":mux_binary_layer",
        ":mux_config_layer",
    ],
    env = {
        "DEBIAN_FRONTEND": "noninteractive",
    },
    labels = {
        "org.opencontainers.image.title": "docker-mux",
        "org.opencontainers.image.description": "SONiC MUX cable manager service",
        "sonic.container.name": "mux",
    },
)
