"""docker-nat — SONiC NAT (Network Address Translation) service container.

Phase 2: collapsed from the 5-deep Make chain to 3 layers:
  distroless/base-debian12 -> sonic-common-layer -> sonic-swss-layer -> this image

Layer accounting:
  Layer 0: gcr.io/distroless/base-debian12           ~20 MB   (upstream, pinned)
  Layer 1: //dockers/sonic-common-layer               ~130 MB  (supervisord, libs)
  Layer 2: //dockers/docker-swss-layer-bullseye       ~120 MB  (libswsscommon+sairedis)
  Layer 3: THIS FILE                                  ~35 MB   (nat binaries + configs)
  Total:                                              ~305 MB  (< 400 MB budget)
"""

load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")
load("//rules/bazel/oci:strip_layer.bzl", "stripped_layer")
load("//rules/bazel/j2:j2.bzl", "j2_render")

package(default_visibility = ["//visibility:public"])

# -- apt runtime packages layer ------------------------------------------------

genrule(
    name = "nat_apt_layer",
    srcs = [],
    outs = ["nat_apt_layer.tar"],
    cmd = """
set -euo pipefail
ROOTFS=$$(mktemp -d)
trap 'rm -rf "$$ROOTFS"' EXIT

apt-get -y install --no-install-recommends \
  -o Dir::Cache=$$ROOTFS/var/cache/apt \
  -o Dir::State=$$ROOTFS/var/lib/apt \
  bridge-utils conntrack iptables

rm -rf $$ROOTFS/var/cache $$ROOTFS/var/lib/apt
SOURCE_DATE_EPOCH=0 tar --sort=name --mtime=@0 \
  --owner=0 --group=0 \
  -C "$$ROOTFS" -cf $(OUTS) .
""",
)

# -- swss binary layer (natsyncd, natmgrd) -------------------------------------

genrule(
    name = "nat_binary_layer",
    srcs = ["//src/sonic-swss:swss_deb"],
    outs = ["nat_binary_layer.tar"],
    cmd = """
set -euo pipefail
ROOTFS=$$(mktemp -d)
trap 'rm -rf "$$ROOTFS"' EXIT
dpkg-deb -x $(SRCS) "$$ROOTFS"
SOURCE_DATE_EPOCH=0 tar --sort=name --mtime=@0 \
  --owner=0 --group=0 \
  -C "$$ROOTFS" -cf $(OUTS) .
""",
)

# -- config + scripts layer ----------------------------------------------------

pkg_tar(
    name = "nat_config_layer",
    srcs = [
        "start.sh",
        "supervisord.conf",
        "critical_processes",
        "restore_nat_entries.py",
    ],
    remap_paths = {
        "start.sh": "/usr/bin/start.sh",
        "supervisord.conf": "/etc/supervisor/conf.d/supervisord.conf",
        "critical_processes": "/etc/supervisor/critical_processes",
        "restore_nat_entries.py": "/usr/bin/restore_nat_entries.py",
    },
    mode = "0755",
)

# -- Size budget enforcement ---------------------------------------------------

stripped_layer(
    name = "nat_apt_layer_stripped",
    src = ":nat_apt_layer",
    size_budget_mb = 15,
)

stripped_layer(
    name = "nat_binary_layer_stripped",
    src = ":nat_binary_layer",
    size_budget_mb = 20,
)

# -- docker-nat OCI image -----------------------------------------------------

sonic_oci_image(
    name = "docker_nat",
    base = "//dockers/docker-swss-layer-bullseye:sonic_swss_layer_bullseye",
    tars = [
        ":nat_apt_layer_stripped",
        ":nat_binary_layer_stripped",
        ":nat_config_layer",
    ],
    env = {
        "DEBIAN_FRONTEND": "noninteractive",
    },
    labels = {
        "org.opencontainers.image.title": "docker-nat",
        "org.opencontainers.image.description": "SONiC NAT service",
        "sonic.container.name": "nat",
    },
)
