"""docker-nat — SONiC NAT (Network Address Translation) service container.

Phase 2: collapsed from the 5-deep Make chain to 3 layers:
  distroless/base-debian12 -> sonic-common-layer -> sonic-swss-layer -> this image

Layer accounting:
  Layer 0: gcr.io/distroless/base-debian12           ~20 MB   (upstream, pinned)
  Layer 1: //dockers/sonic-common-layer               ~130 MB  (supervisord, libs)
  Layer 2: //dockers/docker-swss-layer-bullseye       ~120 MB  (libswsscommon+sairedis)
  Layer 3: THIS FILE                                  ~35 MB   (nat binaries + configs)
  Total:                                              ~305 MB  (< 400 MB budget)
"""

load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:docker_layer.bzl", "apt_install_layer", "deb_extract_layer")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")

package(default_visibility = ["//visibility:public"])

# -- apt runtime packages layer ------------------------------------------------

apt_install_layer(
    name = "nat_apt_layer",
    packages = [
        "bridge-utils",
        "conntrack",
        "iptables",
    ],
    size_budget_mb = 250,
)

# -- swss binary layer (natsyncd, natmgrd) -------------------------------------

deb_extract_layer(
    name = "nat_binary_layer",
    debs = [
        "//src/sonic-swss:swss_deb",
    ],
    size_budget_mb = 250,
)

# -- config + scripts layer ----------------------------------------------------

pkg_tar(
    name = "nat_config_layer",
    srcs = [
        "start.sh",
        "supervisord.conf",
        "critical_processes",
        "restore_nat_entries.py",
    ],
    remap_paths = {
        "start.sh": "/usr/bin/start.sh",
        "supervisord.conf": "/etc/supervisor/conf.d/supervisord.conf",
        "critical_processes": "/etc/supervisor/critical_processes",
        "restore_nat_entries.py": "/usr/bin/restore_nat_entries.py",
    },
    mode = "0755",
)

# -- docker-nat OCI image -----------------------------------------------------

sonic_oci_image(
    name = "docker_nat",
    base = "//dockers/docker-swss-layer-bullseye:sonic_swss_layer_bullseye",
    tars = [
        ":nat_apt_layer",
        ":nat_binary_layer",
        ":nat_config_layer",
    ],
    env = {
        "DEBIAN_FRONTEND": "noninteractive",
    },
    labels = {
        "org.opencontainers.image.title": "docker-nat",
        "org.opencontainers.image.description": "SONiC NAT service",
        "sonic.container.name": "nat",
    },
)
