load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")

package(default_visibility = ["//visibility:public"])

pkg_tar(
    name = "nat_config_layer",
    srcs = glob(
        [
            "*.sh",
            "*.j2",
            "*.conf",
            "*.py",
        ],
        allow_empty = True,
    ),
    mode = "0755",
)

sonic_oci_image(
    name = "docker_nat",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [
        "@bookworm_bridge-utils_1.7.1-1_amd64//:layer.tar.gz",
        "@bookworm_conntrack_1-1.4.7-1-p-b2_amd64//:layer.tar.gz",
        "@bookworm_iptables_1.8.9-2_amd64//:layer.tar.gz",
        ":nat_config_layer",
    ],
    labels = {
        "org.opencontainers.image.title": "docker-nat",
        "sonic.container.name": "nat",
    },
)
