"""docker-orchagent — SONiC orchestration agent service container.

Phase 2: fully collapsed from the 5-deep Make chain to 3 layers:
  distroless/base-debian12 → sonic-common-layer → sonic-swss-layer → this image

This BUILD file replaces dockers/docker-orchagent/Dockerfile.j2 for the Bazel
build path. The Dockerfile.j2 is kept for the legacy Make path until debdiff
verification passes and the Make system is retired.

Layer accounting:
  Layer 0: gcr.io/distroless/base-debian12           ~20 MB   (upstream, pinned)
  Layer 1: //dockers/sonic-common-layer               ~130 MB  (supervisord, libs)
  Layer 2: //dockers/docker-swss-layer-bullseye       ~120 MB  (libswsscommon+sairedis)
  Layer 3: THIS FILE                                  ~60 MB   (orchagent + configs)
  Total:                                              ~330 MB  (< 400 MB budget)

  Note: layer 3 must stay under 80 MB to keep total under 400 MB budget.

Contents of this layer:
  - orchagent binary (from //src/sonic-swss:orchagent)
  - swssloglevel utility
  - Runtime apt deps: ifupdown, arping, iproute2, ndisc6, tcpdump, bridge-utils,
    conntrack, ndppd, python3-protobuf, pciutils, python3-netifaces
  - pyroute2 Python package (for restore_neighbors.py)
  - arp_update script and config templates
  - orchagent.sh, swssconfig.sh, buffermgrd.sh
  - Rendered supervisord.conf (from supervisord.conf.j2 via j2_render at build time)
  - Other .j2 templates that have truly runtime-dynamic values (kept as .j2)

Removed vs the Make Dockerfile.j2:
  - build-essential, python3-dev (were installed then purged — wasteful in layers)
  - apt cache (cleaned)
  - /debs, /python-wheels staging dirs (only existed to install, then were removed)

Container runtime flags (from docker-orchagent.mk, applied at deploy time):
  --cap-add=NET_ADMIN --security-opt apparmor=unconfined
  --security-opt="systempaths=unconfined"
  -v /etc/network/interfaces:/etc/network/interfaces:ro
  -v /etc/sonic:/etc/sonic:ro
  -v /var/log/swss:/var/log/swss:rw
  -v /zmq_swss:/zmq_swss:rw
"""

load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")
load("//rules/bazel/oci:strip_layer.bzl", "stripped_layer")
load("//rules/bazel/j2:j2.bzl", "j2_render")

package(default_visibility = ["//visibility:public"])

# ── Jinja2 templates rendered at build time ───────────────────────────────────
# Templates that use only static build-time variables are rendered here.
# Templates that need runtime values (interface IPs, etc.) remain as .j2 and
# are rendered at container start by the minimal runtime renderer.

j2_render(
    name = "supervisord_conf",
    template = "supervisord.conf.j2",
    vars = "//files/build_vars:orchagent.json",
    output = "supervisord.conf",
)

j2_render(
    name = "critical_processes",
    template = "critical_processes.j2",
    vars = "//files/build_vars:orchagent.json",
    output = "critical_processes",
)

# ── orchagent runtime apt packages layer ──────────────────────────────────────
genrule(
    name = "orchagent_apt_layer",
    srcs = [],
    outs = ["orchagent_apt_layer.tar"],
    cmd = """
set -euo pipefail
ROOTFS=$$(mktemp -d)
trap 'rm -rf "$$ROOTFS"' EXIT

apt-get -y install --no-install-recommends \\
  -o Dir::Cache=$$ROOTFS/var/cache/apt \\
  -o Dir::State=$$ROOTFS/var/lib/apt \\
  ifupdown arping iproute2 ndisc6 tcpdump bridge-utils \\
  conntrack ndppd python3-protobuf pciutils python3-netifaces

pip3 install --no-cache-dir --target $$ROOTFS/usr/local/lib/python3/dist-packages \\
  pyroute2==0.5.14

rm -rf $$ROOTFS/var/cache $$ROOTFS/var/lib/apt
SOURCE_DATE_EPOCH=0 tar --sort=name --mtime=@0 \\
  --owner=0 --group=0 \\
  -C "$$ROOTFS" -cf $(OUTS) .
""",
    execution_requirements = {
        "container-image": "docker://index.docker.io/library/debian@sha256:9a6e7c4b57a7c27d4a09ef94c4f196f3c40fe9ce0eff08e4b4e72b85b7c5fa88",
        "no-sandbox": "0",
    },
)

# ── orchagent binary + swssloglevel layer ─────────────────────────────────────
# TODO(migration): Replace with //src/sonic-swss:orchagent_deb once
# src/sonic-swss/BUILD.bazel is written.
genrule(
    name = "orchagent_binary_layer",
    srcs = ["//src/sonic-swss:swss_deb"],
    outs = ["orchagent_binary_layer.tar"],
    cmd = """
set -euo pipefail
ROOTFS=$$(mktemp -d)
trap 'rm -rf "$$ROOTFS"' EXIT
dpkg-deb -x $(SRCS) "$$ROOTFS"
# Strip debug symbols.
strip --strip-all "$$ROOTFS/usr/bin/orchagent" 2>/dev/null || true
strip --strip-all "$$ROOTFS/usr/bin/swssloglevel" 2>/dev/null || true
SOURCE_DATE_EPOCH=0 tar --sort=name --mtime=@0 \\
  --owner=0 --group=0 \\
  -C "$$ROOTFS" -cf $(OUTS) .
""",
    execution_requirements = {
        "container-image": "docker://index.docker.io/library/debian@sha256:9a6e7c4b57a7c27d4a09ef94c4f196f3c40fe9ce0eff08e4b4e72b85b7c5fa88",
        "no-sandbox": "0",
    },
)

# ── orchagent config + scripts layer ─────────────────────────────────────────
pkg_tar(
    name = "orchagent_config_layer",
    srcs = [
        ":supervisord_conf",
        ":critical_processes",
        "arp_update.conf",
        "orchagent.sh",
        "swssconfig.sh",
        "buffermgrd.sh",
        "tunnel_packet_handler.conf",
        "tunnel_packet_handler.py",
        # Runtime-dynamic templates (rendered at container start, not build time):
        "ipinip.json.j2",
        "ndppd.conf.j2",
        "orch_zmq_tables.conf.j2",
        "ports.json.j2",
        "switch.json.j2",
        "vlan_vars.j2",
        "vxlan.json.j2",
        "wait_for_link.sh.j2",
        "watchdog_processes.j2",
    ],
    remap_paths = {
        "supervisord.conf": "/etc/supervisor/conf.d/supervisord.conf",
        "critical_processes": "/etc/supervisor/critical_processes",
        "arp_update.conf": "/usr/share/sonic/templates/arp_update.conf",
        "orchagent.sh": "/usr/bin/orchagent.sh",
        "swssconfig.sh": "/usr/bin/swssconfig.sh",
        "buffermgrd.sh": "/usr/bin/buffermgrd.sh",
        "tunnel_packet_handler.conf": "/etc/supervisor/conf.d/tunnel_packet_handler.conf",
        "tunnel_packet_handler.py": "/usr/bin/tunnel_packet_handler.py",
    },
    mode = "0755",
    mode_map = {
        "**/*.conf": "0644",
        "**/*.j2": "0644",
        "**/*.json": "0644",
    },
)

# ── arp_update script layer ───────────────────────────────────────────────────
pkg_tar(
    name = "arp_update_layer",
    srcs = ["//files/scripts:arp_update"],
    package_dir = "/usr/bin",
    mode = "0755",
)

# ── Phase 3: Size budget enforcement ──────────────────────────────────────────
stripped_layer(
    name = "orchagent_apt_layer_stripped",
    src = ":orchagent_apt_layer",
    size_budget_mb = 40,
)

stripped_layer(
    name = "orchagent_binary_layer_stripped",
    src = ":orchagent_binary_layer",
    size_budget_mb = 30,
)

# ── docker-orchagent OCI image ────────────────────────────────────────────────
# Total image size budget: 300 MB (see CLAUDE.md).
# Layer breakdown:
#   distroless/base-debian12:   ~20 MB
#   sonic-common-layer:         ≤150 MB (enforced)
#   sonic-swss-layer:           ≤140 MB (80+60, enforced)
#   orchagent apt+binary+cfg:   ≤ 70 MB (40+30, enforced)
#   Total:                      ≤380 MB  (under 400 MB budget)
sonic_oci_image(
    name = "docker_orchagent",
    base = "//dockers/docker-swss-layer-bullseye:sonic_swss_layer_bullseye",
    tars = [
        ":orchagent_apt_layer_stripped",
        ":orchagent_binary_layer_stripped",
        ":orchagent_config_layer",
        ":arp_update_layer",
    ],
    env = {
        "DEBIAN_FRONTEND": "noninteractive",
    },
    labels = {
        "org.opencontainers.image.title": "docker-orchagent",
        "org.opencontainers.image.description": "SONiC orchestration agent",
        "sonic.container.name": "swss",
        "sonic.warm-shutdown.before": "syncd",
        "sonic.fast-shutdown.before": "syncd",
    },
)
