"""docker-orchagent — SONiC orchestration agent service container.

Phase 2: collapsed from 5-deep chain to ≤3 layers:
  distroless/base-debian12 → sonic-common-layer → sonic-swss-layer → this
"""

load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")
load("//rules/bazel/oci:docker_layer.bzl", "apt_install_layer", "deb_extract_layer")
load("//rules/bazel/j2:j2.bzl", "j2_render")

package(default_visibility = ["//visibility:public"])

# ── Jinja2 templates rendered at build time ───────────────────────────────────

j2_render(
    name = "supervisord_conf",
    template = "supervisord.conf.j2",
    vars = "//files/build_vars:orchagent.json",
    output = "supervisord.conf",
)

j2_render(
    name = "critical_processes_rendered",
    template = "critical_processes.j2",
    vars = "//files/build_vars:orchagent.json",
    output = "critical_processes.rendered",
)

# ── orchagent runtime apt packages layer ──────────────────────────────────────

apt_install_layer(
    name = "orchagent_apt_layer",
    packages = [
        "ifupdown", "arping", "iproute2", "ndisc6", "tcpdump",
        "bridge-utils", "conntrack", "ndppd", "python3-protobuf",
        "pciutils", "python3-netifaces", "python3-pip",
    ],
    pip_packages = ["pyroute2==0.5.14"],
    size_budget_mb = 250,
)

# ── orchagent binary layer (from swss .deb) ──────────────────────────────────

deb_extract_layer(
    name = "orchagent_binary_layer",
    debs = ["//src/sonic-swss:swss_deb"],
    size_budget_mb = 50,
)

# ── orchagent config + scripts layer ─────────────────────────────────────────

pkg_tar(
    name = "orchagent_config_layer",
    srcs = [
        ":supervisord_conf",
        ":critical_processes_rendered",
    ] + glob([
        "*.sh",
        "*.conf",
        "*.py",
        "*.j2",
    ]),
    mode = "0755",
)

# ── docker-orchagent OCI image ────────────────────────────────────────────────

sonic_oci_image(
    name = "docker_orchagent",
    base = "//dockers/docker-swss-layer-bullseye:sonic_swss_layer_bullseye",
    tars = [
        ":orchagent_apt_layer",
        ":orchagent_binary_layer",
        ":orchagent_config_layer",
    ],
    env = {
        "DEBIAN_FRONTEND": "noninteractive",
    },
    labels = {
        "org.opencontainers.image.title": "docker-orchagent",
        "org.opencontainers.image.description": "SONiC orchestration agent",
        "sonic.container.name": "swss",
        "sonic.warm-shutdown.before": "syncd",
        "sonic.fast-shutdown.before": "syncd",
    },
)
