"""docker-pde — SONiC Platform Diagnostic Environment (PDE) container (hermetic apt)."""

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")
load("//rules/bazel/oci:sonic_docker.bzl", "slim_apt_layer")

package(default_visibility = ["//visibility:public"])

# ── Apt packages layer (hermetic @bookworm) ─────────────────────────────────

slim_apt_layer(
    name = "pde_apt_slim",
    srcs = [
        "@bookworm_iproute2_6.1.0-3_amd64//:data",
        "@bookworm_pciutils_1-3.9.0-4_amd64//:data",
    ],
)

# TODO: Add hermetic @bookworm packages for: ipmitool, telnet, busybox,
#       kmod, bzip2, curl, ioping, openssl, bc, sysstat, i2c-tools,
#       python3-jsonschema when they are declared in MODULE.bazel.

# ── Service debs layer ───────────────────────────────────────────────────────
# TODO: Convert //src/sonic-platform-pde:sonic_pde_debs to hermetic layer
#       once the submodule BUILD is migrated.

# ── Config + scripts layer ───────────────────────────────────────────────────

pkg_tar(
    name = "pde_config_layer",
    srcs = glob(
        [
            "*.sh",
            "*.j2",
            "*.conf",
            "*.py",
        ],
        allow_empty = True,
    ),
    mode = "0755",
)

# ── docker-pde OCI image ────────────────────────────────────────────────────

sonic_oci_image(
    name = "docker_pde",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [
        ":pde_apt_slim",
        ":pde_config_layer",
    ],
    labels = {
        "org.opencontainers.image.title": "docker-pde",
        "sonic.container.name": "pde",
    },
)
